prevent scrollbar at navbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -435,7 +435,7 @@ p {
     flex-wrap: nowrap;
     height: 100%;
     min-width: 330px;
-    overflow: scroll;
+    overflow: visible;
   }
   .title {
     padding: 0px 10px;
